<resources>
    <string name="app_name">ConstraintLayoutExample</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="placeholder">placeholder</string>
    <string name="camera">Camera</string>
    <string name="camera_value">Leica M Type 240</string>
    <string name="settings">Settings</string>
    <string name="settings_value">f/4 16s ISO 200</string>
    <string name="action_btn_upload">Upload</string>
    <string name="action_btn_discard">Discard</string>
    <string name="sunset_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum velit ac ipsum molestie, vel consequat nunc viverra. Morbi vel volutpat urna. Suspendisse pellentesque dolor vitae neque euismod semper. Nulla facilisi. Nunc scelerisque a risus id tempus. Proin ex leo, commodo sit amet massa ut, gravida sollicitudin neque. Phasellus mauris libero, imperdiet ac dictum et, semper ut mauris. Sed tempor efficitur ipsum nec ultrices. Vivamus nisl ligula, facilisis vel tristique quis, porttitor id purus. Nullam tincidunt, justo ac facilisis luctus, massa elit iaculis ex, quis sollicitudin sem neque ut quam. Proin ut malesuada velit. Nunc consequat consequat ligula eget facilisis. Etiam consectetur pharetra elit. Sed est neque, cursus id urna at, molestie pretium ante.</string>
    <string name="subtitle">Sunset</string>
</resources>
